@@ -124,13 +124,6 @@
         current length of the selected resource (see section 14.16). This
         response MUST NOT use the multipart/byteranges content- type.
       </p>
-      <p class="424">
-        The method was not executed on a particular resource within its scope
-        because some part of the method's execution failed causing the entire
-        method to be aborted. For example, if a command in a PROPPATCH method
-        fails then, at minimum, the rest of the commands will also fail with 424
-        Method Failure.
-      </p>
     </main>
     <footer>
       <section>
