@@ -97,12 +97,6 @@
         header field to indicate that it is temporary and after what time the client
         MAY try again.
       </p>
-      <p class="424">
-        The method was not executed on a particular resource within its scope because
-        some part of the method's execution failed causing the entire method to
-        be aborted. For example, if a command in a PROPPATCH method fails then,
-        at minimum, the rest of the commands will also fail with 424 Method Failure.
-      </p>
     </header>
     <footer>
       <section>
