@@ -12,6 +12,8 @@
 ??: Service: devwex start [directory] (read all ini files from directory)
 ??: Automation (build, test, release) via GitHub actions
 BF: HTTP(S): Update / standardization of HTTP status messages
+BF: HTTP(S): Omission of status 424, which was simply incorrect
+    Status 500 and 408 are now used correctly.
 
 5.7.0 20241214
 BF: Unix/Linux: Correction of the missing second start parameter in the bash script
